--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "126f585f",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6f3a4f82",
    "metadata": {},
    "outputs": [],
@@ -100,10 +100,13 @@
     "    M = sum(results)\n",
     "    N = 2**n_qubits_in\n",
     "\n",
+    "    print(M,N)\n",
+    "\n",
     "    if M == 0:\n",
     "        raise ValueError(\"Empty oracle\")\n",
     "\n",
     "    theta = 2 * math.asin(math.sqrt(M / N))\n",
+    "    print(theta)\n",
     "    n_rep_without_round = (math.pi / theta - 1) / 2\n",
     "    n_rep = round(n_rep_without_round)\n",
     "    print(\"Exact number of repetitions: \", round(n_rep_without_round, 4))\n",
@@ -144,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3bf07ce0",
    "metadata": {},
    "outputs": [
@@ -153,9 +156,11 @@
      "output_type": "stream",
      "text": [
       "Experiment with 7 qubits\n",
+      "2 64\n",
+      "0.3554212016902235\n",
       "Exact number of repetitions:  3.9195\n",
       "Number of repetitions rounded:  4\n",
-      "Resultados: {'101010': 551, '001000': 473}\n"
+      "Resultados: {'000110': 1, '001000': 504, '111001': 1, '101010': 518}\n"
      ]
     }
    ],
@@ -269,6 +274,29 @@
     "    plt.title(f\"Histogram for backend {backend.name}\")\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15cd7132",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    M = sum(results)\n",
+    "    N = 2**n_qubits_in\n",
+    "\n",
+    "    print(M,N)\n",
+    "\n",
+    "    if M == 0:\n",
+    "        raise ValueError(\"Empty oracle\")\n",
+    "\n",
+    "    theta = 2 * math.asin(math.sqrt(M / N))\n",
+    "    print(theta)\n",
+    "    n_rep_without_round = (math.pi / theta - 1) / 2\n",
+    "    n_rep = round(n_rep_without_round)\n",
+    "    print(\"Exact number of repetitions: \", round(n_rep_without_round, 4))\n",
+    "    print(\"Number of repetitions rounded: \", n_rep)"
    ]
   }
  ],
