Ideal runs result implementation

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "6f3a4f82",
    "metadata": {},
    "outputs": [],
@@ -49,6 +49,9 @@
     "        if result:\n",
     "            qc.mcx(reg_in, reg_out, ctrl_state=i)\n",
     "\n",
+    "def bin_to_int(binarios):\n",
+    "    ints = [int(b, 2) for b in binarios]\n",
+    "    print(ints)\n",
     "\n",
     "def create_diffusor(qc, reg_in):\n",
     "    qc.h(reg_in)\n",
@@ -81,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "9a635d9b",
    "metadata": {},
    "outputs": [],
@@ -100,13 +103,10 @@
     "    M = sum(results)\n",
     "    N = 2**n_qubits_in\n",
     "\n",
-    "    print(M,N)\n",
-    "\n",
     "    if M == 0:\n",
     "        raise ValueError(\"Empty oracle\")\n",
     "\n",
     "    theta = 2 * math.asin(math.sqrt(M / N))\n",
-    "    print(theta)\n",
     "    n_rep_without_round = (math.pi / theta - 1) / 2\n",
     "    n_rep = round(n_rep_without_round)\n",
     "    print(\"Exact number of repetitions: \", round(n_rep_without_round, 4))\n",
@@ -147,7 +147,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
+   "id": "150ff72a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def testIdeal(string_comparison, string_match):\n",
+    "    qc = create_string_match(string_comparison, string_match)\n",
+    "\n",
+    "    backend_ideal = AerSimulator()\n",
+    "    t_qc = transpile(qc, backend_ideal)\n",
+    "\n",
+    "    result = backend_ideal.run(t_qc, shots=1024).result()\n",
+    "    counts = result.get_counts()\n",
+    "\n",
+    "    print(\"Resultados:\", counts)\n",
+    "    plot_histogram(counts)\n",
+    "    plt.title(\"Histogram (Ideal Simulation)\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8845c204",
+   "metadata": {},
+   "source": [
+    "##### Teste 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "3bf07ce0",
    "metadata": {},
    "outputs": [
@@ -156,11 +187,9 @@
      "output_type": "stream",
      "text": [
       "Experiment with 7 qubits\n",
-      "2 64\n",
-      "0.3554212016902235\n",
       "Exact number of repetitions:  3.9195\n",
       "Number of repetitions rounded:  4\n",
-      "Resultados: {'000110': 1, '001000': 504, '111001': 1, '101010': 518}\n"
+      "Resultados: {'101010': 546, '001000': 478}\n"
      ]
     }
    ],
@@ -168,24 +197,20 @@
     "string_comparison = \"Eu como banana e maçã pela tarde, e outra banana de noite!\"\n",
     "string_match = \"banana\"\n",
     "\n",
-    "qc = create_string_match(string_comparison, string_match)\n",
-    "\n",
-    "backend_ideal = AerSimulator()\n",
-    "t_qc = transpile(qc, backend_ideal)\n",
-    "\n",
-    "result = backend_ideal.run(t_qc, shots=1024).result()\n",
-    "counts = result.get_counts()\n",
-    "\n",
-    "print(\"Resultados:\", counts)\n",
-    "plot_histogram(counts)\n",
-    "plt.title(\"Histogram (Ideal Simulation)\")\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "testIdeal(string_comparison,string_match)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99c404be",
+   "metadata": {},
+   "source": [
+    "##### Teste 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "id": "5e5e2ee7",
    "metadata": {},
    "outputs": [
@@ -193,16 +218,146 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[42, 8]\n"
+      "Experiment with 7 qubits\n",
+      "Exact number of repetitions:  5.7667\n",
+      "Number of repetitions rounded:  6\n",
+      "Resultados: {'000011': 1024}\n"
      ]
     }
    ],
    "source": [
-    "binario = [\"101010\", \"001000\"]\n",
+    "string_comparison = \"Eu como banana e maçã pela tarde, e outra banana de noite!\"\n",
+    "string_match = \"como\"\n",
     "\n",
-    "decimais = [int(b, 2) for b in binario]\n",
+    "testIdeal(string_comparison,string_match)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24e2f33b",
+   "metadata": {},
+   "source": [
+    "##### Teste 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "7587243e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment with 7 qubits\n",
+      "Exact number of repetitions:  5.7667\n",
+      "Number of repetitions rounded:  6\n",
+      "Resultados: {'100011': 1, '111000': 1, '001111': 1, '111001': 1, '010001': 1020}\n"
+     ]
+    }
+   ],
+   "source": [
+    "string_comparison = \"Eu como banana e maçã pela tarde, e outra banana de noite!\"\n",
+    "string_match = \"maçã\"\n",
     "\n",
-    "print(decimais)"
+    "testIdeal(string_comparison,string_match)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95289ff0",
+   "metadata": {},
+   "source": [
+    "##### Teste 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "c088e2e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment with 7 qubits\n",
+      "Exact number of repetitions:  5.7667\n",
+      "Number of repetitions rounded:  6\n",
+      "Resultados: {'001001': 1024}\n"
+     ]
+    }
+   ],
+   "source": [
+    "string_comparison = \"Todos os dias quando acordo, não tenho mais o tempo que passou\"\n",
+    "string_match = \"dias\"\n",
+    "\n",
+    "testIdeal(string_comparison,string_match)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4eb19f32",
+   "metadata": {},
+   "source": [
+    "##### Teste 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "9ed34a2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment with 7 qubits\n",
+      "Exact number of repetitions:  5.7667\n",
+      "Number of repetitions rounded:  6\n",
+      "Resultados: {'101110': 1024}\n"
+     ]
+    }
+   ],
+   "source": [
+    "string_comparison = \"Todos os dias quando acordo, não tenho mais o tempo que passou\"\n",
+    "string_match = \"tempo\"\n",
+    "\n",
+    "testIdeal(string_comparison,string_match)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c67fca69",
+   "metadata": {},
+   "source": [
+    "##### Teste 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "id": "2ca6e775",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment with 7 qubits\n",
+      "Exact number of repetitions:  3.0989\n",
+      "Number of repetitions rounded:  3\n",
+      "Resultados: {'011001': 369, '010010': 338, '000010': 317}\n"
+     ]
+    }
+   ],
+   "source": [
+    "string_comparison = \"Todos os dias quando acordo, não tenho mais o tempo que passou\"\n",
+    "string_match = \"do\"\n",
+    "\n",
+    "testIdeal(string_comparison,string_match)"
    ]
   },
   {
@@ -274,29 +429,6 @@
     "    plt.title(f\"Histogram for backend {backend.name}\")\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15cd7132",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    M = sum(results)\n",
-    "    N = 2**n_qubits_in\n",
-    "\n",
-    "    print(M,N)\n",
-    "\n",
-    "    if M == 0:\n",
-    "        raise ValueError(\"Empty oracle\")\n",
-    "\n",
-    "    theta = 2 * math.asin(math.sqrt(M / N))\n",
-    "    print(theta)\n",
-    "    n_rep_without_round = (math.pi / theta - 1) / 2\n",
-    "    n_rep = round(n_rep_without_round)\n",
-    "    print(\"Exact number of repetitions: \", round(n_rep_without_round, 4))\n",
-    "    print(\"Number of repetitions rounded: \", n_rep)"
    ]
   }
  ],
