--- a/Bernstein-Vazirani Implementation/BV.ipynb
+++ b/Bernstein-Vazirani Implementation/BV.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "id": "47edc104",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "id": "09add1b1",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "id": "85da27a6",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "d925feb7",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "b6f6360d",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,61 @@
     "testIdeal(\"01111\")\n",
     "testIdeal(\"11111\")\n",
     "testIdeal(\"11000\")\n",
-    "testIdeal(\"11100\")\n"
+    "testIdeal(\"11100\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8887c529",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultados: {'10001': 1024}\n",
+      "Resultados: {'01010': 1024}\n",
+      "Resultados: {'10101': 1024}\n",
+      "Resultados: {'10010': 1024}\n",
+      "Resultados: {'01001': 1024}\n",
+      "Resultados: {'1000000': 1024}\n",
+      "Resultados: {'0100000': 1024}\n",
+      "Resultados: {'0010000': 1024}\n",
+      "Resultados: {'0001000': 1024}\n",
+      "Resultados: {'0000100': 1024}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/humbertotavora/Documents/UFPE/Mestrado/Disciplinas/Comp Quantica/Projeto/quantum-string-match/.venv/lib/python3.13/site-packages/qiskit/visualization/circuit/matplotlib.py:287: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`). Consider using `matplotlib.pyplot.close()`.\n",
+      "  mpl_figure = plt.figure()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultados: {'0000010': 1024}\n",
+      "Resultados: {'0000001': 1024}\n"
+     ]
+    }
+   ],
+   "source": [
+    "testIdeal(\"10001\")\n",
+    "testIdeal(\"01010\")\n",
+    "testIdeal(\"10101\")\n",
+    "testIdeal(\"10010\")\n",
+    "testIdeal(\"01001\")\n",
+    "testIdeal(\"1000000\")\n",
+    "testIdeal(\"0100000\")\n",
+    "testIdeal(\"0010000\")\n",
+    "testIdeal(\"0001000\")\n",
+    "testIdeal(\"0000100\")\n",
+    "testIdeal(\"0000010\")\n",
+    "testIdeal(\"0000001\")"
    ]
   },
   {
@@ -215,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "id": "0b3eb622",
    "metadata": {},
    "outputs": [
@@ -223,7 +277,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "qiskit_runtime_service.__init__:WARNING:2025-11-28 22:13:51,508: Instance was not set at service instantiation. Free and trial plan instances will be prioritized. Based on the following filters: (tags: None, region: us-east, eu-de), and available plans: (open), the available account instances are: Projeto-Algo_I. If you need a specific instance set it explicitly either by using a saved account with a saved default instance or passing it in directly to QiskitRuntimeService().\n"
+      "qiskit_runtime_service.__init__:WARNING:2025-11-29 23:25:18,959: Instance was not set at service instantiation. Free and trial plan instances will be prioritized. Based on the following filters: (tags: None, region: us-east, eu-de), and available plans: (open), the available account instances are: Projeto-Algo_I. If you need a specific instance set it explicitly either by using a saved account with a saved default instance or passing it in directly to QiskitRuntimeService().\n"
      ]
     }
    ],
@@ -242,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3f0d5f99",
    "metadata": {},
    "outputs": [],
@@ -471,6 +525,208 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "10d8f630",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "qiskit_runtime_service.backends:WARNING:2025-11-29 23:25:46,596: Loading instance: Projeto-Algo_I, plan: open\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Backend:  ibm_fez\n",
+      "Backend:  ibm_torino\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "qiskit_runtime_service.backends:WARNING:2025-11-29 23:25:55,495: Loading instance: Projeto-Algo_I, plan: open\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Backend:  ibm_fez\n",
+      "Backend:  ibm_torino\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "qiskit_runtime_service.backends:WARNING:2025-11-29 23:26:03,113: Loading instance: Projeto-Algo_I, plan: open\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Backend:  ibm_fez\n",
+      "Backend:  ibm_torino\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "qiskit_runtime_service.backends:WARNING:2025-11-29 23:26:11,146: Loading instance: Projeto-Algo_I, plan: open\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Backend:  ibm_fez\n",
+      "Backend:  ibm_torino\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "qiskit_runtime_service.backends:WARNING:2025-11-29 23:26:18,501: Loading instance: Projeto-Algo_I, plan: open\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Backend:  ibm_fez\n",
+      "Backend:  ibm_torino\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "qiskit_runtime_service.backends:WARNING:2025-11-29 23:26:26,158: Loading instance: Projeto-Algo_I, plan: open\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Backend:  ibm_fez\n",
+      "Backend:  ibm_torino\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "qiskit_runtime_service.backends:WARNING:2025-11-29 23:26:34,048: Loading instance: Projeto-Algo_I, plan: open\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Backend:  ibm_fez\n",
+      "Backend:  ibm_torino\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "qiskit_runtime_service.backends:WARNING:2025-11-29 23:26:42,262: Loading instance: Projeto-Algo_I, plan: open\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Backend:  ibm_fez\n",
+      "Backend:  ibm_torino\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "qiskit_runtime_service.backends:WARNING:2025-11-29 23:26:50,017: Loading instance: Projeto-Algo_I, plan: open\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Backend:  ibm_fez\n",
+      "Backend:  ibm_torino\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "qiskit_runtime_service.backends:WARNING:2025-11-29 23:26:57,574: Loading instance: Projeto-Algo_I, plan: open\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Backend:  ibm_fez\n",
+      "Backend:  ibm_torino\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "qiskit_runtime_service.backends:WARNING:2025-11-29 23:27:05,015: Loading instance: Projeto-Algo_I, plan: open\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Backend:  ibm_fez\n",
+      "Backend:  ibm_torino\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "qiskit_runtime_service.backends:WARNING:2025-11-29 23:27:12,851: Loading instance: Projeto-Algo_I, plan: open\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Backend:  ibm_fez\n",
+      "Backend:  ibm_torino\n"
+     ]
+    }
+   ],
+   "source": [
+    "testNoise(\"10001\")\n",
+    "testNoise(\"01010\")\n",
+    "testNoise(\"10101\")\n",
+    "testNoise(\"10010\")\n",
+    "testNoise(\"01001\")\n",
+    "testNoise(\"1000000\")\n",
+    "testNoise(\"0100000\")\n",
+    "testNoise(\"0010000\")\n",
+    "testNoise(\"0001000\")\n",
+    "testNoise(\"0000100\")\n",
+    "testNoise(\"0000010\")\n",
+    "testNoise(\"0000001\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c8f1ac97",
    "metadata": {},
@@ -488,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "id": "8e4e85ea",
    "metadata": {},
    "outputs": [
@@ -496,7 +752,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "qiskit_runtime_service.__init__:WARNING:2025-11-28 22:22:36,760: Instance was not set at service instantiation. Free and trial plan instances will be prioritized. Based on the following filters: (tags: None, region: us-east, eu-de), and available plans: (open), the available account instances are: Projeto-Algo_I. If you need a specific instance set it explicitly either by using a saved account with a saved default instance or passing it in directly to QiskitRuntimeService().\n"
+      "qiskit_runtime_service.__init__:WARNING:2025-11-29 23:28:26,671: Instance was not set at service instantiation. Free and trial plan instances will be prioritized. Based on the following filters: (tags: None, region: us-east, eu-de), and available plans: (open), the available account instances are: Projeto-Algo_I. If you need a specific instance set it explicitly either by using a saved account with a saved default instance or passing it in directly to QiskitRuntimeService().\n"
      ]
     }
    ],
@@ -516,22 +772,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c9014950",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mO Kernel deu pane ao executar o código na célula atual ou em uma célula anterior. \n",
-      "\u001b[1;31mAnalise o código nas células para identificar uma possível causa da pane. \n",
-      "\u001b[1;31mClique <a href='https://aka.ms/vscodeJupyterKernelCrash'>aqui</a> para obter mais informações. \n",
-      "\u001b[1;31mConsulte Jupyter <a href='command:jupyter.viewOutput'>log</a> para obter mais detalhes."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def testReal(secret_string: str):\n",
     "    qc = bernstein_vazirani_circuit(secret_string)\n",
@@ -567,28 +811,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "af4915ac",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "qiskit_runtime_service.backends:WARNING:2025-11-28 22:24:21,225: Loading instance: Projeto-Algo_I, plan: open\n",
-      "qiskit_runtime_service.backends:WARNING:2025-11-28 22:24:30,180: Loading instance: Projeto-Algo_I, plan: open\n",
-      "qiskit_runtime_service.backends:WARNING:2025-11-28 22:24:38,022: Loading instance: Projeto-Algo_I, plan: open\n",
-      "qiskit_runtime_service.backends:WARNING:2025-11-28 22:24:45,414: Loading instance: Projeto-Algo_I, plan: open\n",
-      "qiskit_runtime_service.backends:WARNING:2025-11-28 22:24:52,256: Loading instance: Projeto-Algo_I, plan: open\n",
-      "qiskit_runtime_service.backends:WARNING:2025-11-28 22:24:58,957: Loading instance: Projeto-Algo_I, plan: open\n",
-      "qiskit_runtime_service.backends:WARNING:2025-11-28 22:25:05,891: Loading instance: Projeto-Algo_I, plan: open\n",
-      "qiskit_runtime_service.backends:WARNING:2025-11-28 22:25:12,754: Loading instance: Projeto-Algo_I, plan: open\n",
-      "qiskit_runtime_service.backends:WARNING:2025-11-28 22:25:20,201: Loading instance: Projeto-Algo_I, plan: open\n",
-      "qiskit_runtime_service.backends:WARNING:2025-11-28 22:25:28,141: Loading instance: Projeto-Algo_I, plan: open\n",
-      "qiskit_runtime_service.backends:WARNING:2025-11-28 22:25:34,654: Loading instance: Projeto-Algo_I, plan: open\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "testReal(\"10000\")\n",
     "testReal(\"01000\")\n",
